--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -9,18 +9,11 @@
 
   opacity: 1;
   transition: opacity var(--anim-d) var(--anim-t);
+
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
-/*_______________HIDDEN MODAL_________________*/
-/*
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-*/
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
 /*_______________END HIDDEN MODAL_________________*/
