--- a/sass/components/_s-btn.scss
+++ b/sass/components/_s-btn.scss
@@ -1,10 +1,7 @@
-/*typical buttons*/
 .s-btn {
   background: var(--focus-colour);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px; /*
-  padding-left: 29px;
-  padding-right: 29px;*/
+  border-radius: 4px;
   width: 200px;
   height: 50px;
   border: none;
@@ -14,14 +11,13 @@
   justify-content: center;
   align-items: center;
   font-weight: 700;
+
+  &:hover,
+  &:focus {
+    background: var(--hero-button-focus-colour);
+  }
 }
 
-.s-btn:hover,
-.s-btn:focus {
-  background: var(--hero-button-focus-colour);
-}
 .s-btn-icon {
   fill: var(--dark-text-colour);
 }
-
-/*end typical buttons*/
