--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,6 @@ address {
   pointer-events: none;
 }
 
-/*_______________END HIDDEN MODAL_________________*/
 .modal {
   position: absolute;
   width: 528px;
@@ -237,9 +236,7 @@ address {
   align-items: center;
   cursor: pointer;
 }
-
-.modal-close-btn:hover .modal-close-svg,
-.modal-close-btn:focus .modal-close-svg {
+.modal-close-btn:hover .modal-close-svg, .modal-close-btn:focus .modal-close-svg {
   fill: var(--focus-colour);
 }
 
@@ -256,16 +253,6 @@ address {
   font-weight: 700;
 }
 
-/*
-.modal-form-subtitle {
-  margin-bottom: 15px;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--seconary-colour);
-  width: 100%;
-}
-*/
 .modal-form-input,
 .modal-user-comment {
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -279,6 +266,21 @@ address {
   line-height: 1.67;
   letter-spacing: 0.01em;
   margin-top: 4px;
+}
+.modal-form-input::-moz-placeholder, .modal-user-comment::-moz-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form-input:-ms-input-placeholder, .modal-user-comment:-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form-input::placeholder,
+.modal-user-comment::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form-input:focus,
+.modal-user-comment:focus {
+  border: 1px solid var(--focus-colour);
+  outline: none;
 }
 
 .modal-form-input-wrapper {
@@ -319,47 +321,15 @@ address {
   padding: 12px 16px;
 }
 
-.modal-form-input::-moz-placeholder, .modal-user-comment::-moz-placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form-input:-ms-input-placeholder, .modal-user-comment:-ms-input-placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form-input::placeholder,
-.modal-user-comment::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
 .modal-form-input {
   height: 40px;
   padding-left: 42px;
   cursor: pointer;
 }
-
-.modal-form-input:focus,
-.modal-user-comment:focus {
-  border: 1px solid var(--focus-colour);
-  outline: none;
-}
-
 .modal-form-input:focus + .modal-form-input-icon {
   fill: var(--focus-colour);
 }
 
-/*
-.our-license-check-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: var(--primary-margin);
-}
-*/
-/*
-.our-license-check {
-  margin-right: 7px;
-}*/
 .our-license-check-z {
   line-height: 1.71;
   color: var(--seconary-colour);
@@ -395,9 +365,7 @@ address {
   cursor: pointer;
   transition: background var(--anim-d) var(--anim-t);
 }
-
-.send-btn:hover,
-.send-btn:focus {
+.send-btn:hover, .send-btn:focus {
   background: var(--hero-button-focus-colour);
 }
 
@@ -407,12 +375,6 @@ address {
   margin-top: var(--primary-margin);
 }
 
-/*
-.modal-form-input:required:focus:invalid,
-.modal-form-input:required:focus:not(:placeholder-shown):invalid{
-  border-color: red;
-}
-*/
 .user-accept-license::before {
   display: inline-block;
   content: "";
@@ -423,17 +385,14 @@ address {
   vertical-align: middle;
 }
 
+.our-license-check {
+  vertical-align: middle;
+}
 .our-license-check:checked + .user-accept-license::before {
   background-image: url("../images/check-valid.svg");
 }
-
 .our-license-check:focus + .user-accept-license::before {
-  /*box-shadow: 0px 4px 4px var(--focus-colour);*/
   outline: 2px solid var(--focus-colour);
-}
-
-.our-license-check {
-  vertical-align: middle;
 }
 
 .header {
@@ -460,6 +419,11 @@ address {
   color: var(--main-colour);
   transition: color var(--anim-d) var(--anim-t);
 }
+.menu-link:hover, .menu-link:focus,
+.menu-contact:hover,
+.menu-contact:focus {
+  color: var(--focus-colour);
+}
 
 .navigation-contact {
   margin-left: auto;
@@ -472,17 +436,10 @@ address {
   padding-bottom: 32px;
 }
 
-.menu-link:hover,
-.menu-link:focus,
-.menu-link:active,
-.current-link,
-.menu-contact:hover,
-.menu-contact:focus {
+.current-link {
   color: var(--focus-colour);
 }
-
-.menu-link:hover:after,
-.menu-link:focus:after {
+.current-link.menu-link::after {
   opacity: 1;
 }
 
@@ -490,10 +447,9 @@ address {
   position: relative;
 }
 
-.current-link.menu-link::after {
+.menu-link:hover:after, .menu-link:focus:after {
   opacity: 1;
 }
-
 .menu-link::after {
   content: "";
   position: absolute;
@@ -516,32 +472,18 @@ address {
 }
 
 .contact-header-svg {
-  /* height: 16px;*/
   fill: var(--seconary-colour);
   margin-right: 10px;
   display: flex;
   align-items: center;
-  /*border: 1px solid red;*/
   transition: fill var(--anim-d) var(--anim-t);
 }
 
 .menu-contact {
-  /*border: 1px solid black;*/
   display: flex;
   align-items: center;
 }
-
-/*
-.mail-svg {
-  width: 12px;
-}
-
-.tel-svg {
-  width: 10px;
-}
-*/
-.menu-contact:hover .contact-header-svg,
-.menu-contact:focus .contact-header-svg {
+.menu-contact:hover .contact-header-svg, .menu-contact:focus .contact-header-svg {
   fill: var(--focus-colour);
 }
 
@@ -558,7 +500,6 @@ address {
 .address-footer-list {
   flex-direction: column;
 }
-
 .address-footer-list > .address-footer-list-title:not(:last-child) {
   margin-bottom: 9px;
 }
@@ -630,6 +571,10 @@ address {
   cursor: pointer;
   color: rgba(255, 255, 255, 0.6);
 }
+.subscribe-form-input:focus {
+  border: 1px solid var(--focus-colour);
+  outline: none;
+}
 
 .subscribe-btn-icon {
   margin-left: 10px;
@@ -639,19 +584,6 @@ address {
   margin-left: 12px;
 }
 
-.subscribe-form-input:focus {
-  border: 1px solid var(--focus-colour);
-}
-
-.subscribe-form-input:focus {
-  outline: none;
-}
-
-/*
-.subscribe-form-input::placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-*/
 .subscribe-btn {
   font-size: var(--seconary-font-size);
   line-height: 1.88;
@@ -697,6 +629,7 @@ address {
   color: var(--dark-text-colour);
   margin-left: auto;
   margin-right: auto;
+  box-shadow: none;
 }
 
 .hero-title {
@@ -706,33 +639,6 @@ address {
   text-transform: uppercase;
   margin-bottom: 30px;
   width: 696px;
-  /* height: 120px;*/
-}
-
-.hero-button {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  display: flex;
-  align-items: center;
-  background-color: var(--focus-colour);
-  cursor: pointer;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  border-radius: 4px;
-  padding: 10px 32px;
-  border: 0px;
-  transition: background-color var(--anim-d) var(--anim-t);
-}
-
-.hero-button:hover,
-.hero-button:focus,
-.hero-button {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-
-.hero-button:hover,
-.hero-button:focus {
-  background-color: var(--hero-button-focus-colour);
 }
 
 .features-svg {
@@ -760,12 +666,6 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
-  /*
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-left: 100px;
-  padding-right: 100px;
-  */
   width: 270px;
   height: 120px;
   background-color: var(--button-background-colour);
@@ -773,10 +673,6 @@ address {
   margin-bottom: var(--primary-margin);
 }
 
-/*.features-list > .features-block:not(:last-child) {
-  margin-right: 30px;
-}
-*/
 .features-block {
   margin-left: var(--primary-margin);
   margin-top: var(--primary-margin);
@@ -817,14 +713,11 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding-top: 27px;
-  padding-bottom: 27px;*/
   height: 70px;
   bottom: 0;
   left: 0;
   overflow: auto;
   width: 100%;
-  /*transform: translateY(100%);*/
 }
 
 /*end overlay text*/
@@ -841,7 +734,6 @@ address {
 .command-list-item-title {
   font-weight: 500;
   line-height: 1.19;
-  /*margin-top: 30px;*/
   margin-bottom: 10px;
 }
 
@@ -897,22 +789,18 @@ address {
   width: 170px;
   height: 92px;
 }
+.clients-list-link:hover, .clients-list-link:focus {
+  border: 1px solid var(--focus-colour);
+}
+.clients-list-link:hover .clients-svg, .clients-list-link:focus .clients-svg {
+  fill: var(--focus-colour);
+}
 
 .clients-svg {
   height: 60px;
   width: 106px;
   fill: var(--tripple-colour);
   transition: fill var(--anim-d) var(--anim-t);
-}
-
-.clients-list-link:hover,
-.clients-list-link:focus {
-  border: 1px solid var(--focus-colour);
-}
-
-.clients-list-link:hover .clients-svg,
-.clients-list-link:focus .clients-svg {
-  fill: var(--focus-colour);
 }
 
 .clients-list-item {
@@ -939,28 +827,21 @@ address {
   padding-right: var(--portfolio-button-horizontal-padding);
   padding-top: var(--portfolio-button-vertical-padding);
   padding-bottom: var(--portfolio-button-vertical-padding);
-  /* border: 2px solid black;*/
   border: none;
   transition: color var(--anim-d) var(--anim-t), background-color var(--anim-d) var(--anim-t), box-shadow var(--anim-d) var(--anim-t);
+}
+.portfolio-button:hover, .portfolio-button:focus {
+  color: var(--dark-text-colour);
+  background-color: var(--focus-colour);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-button-list {
   margin-bottom: 50px;
-  /* padding-left: var(--portfolio-button-list-padding);
-  padding-right: var(--portfolio-button-list-padding);*/
-  /*justify-content: space-between;*/
   justify-content: center;
 }
-
 .portfolio-button-list > .portfolio-button-list-item:not(:last-child) {
   margin-right: 8px;
-}
-
-.portfolio-button:hover,
-.portfolio-button:focus {
-  color: var(--dark-text-colour);
-  background-color: var(--focus-colour);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list-item-title {
@@ -980,18 +861,17 @@ address {
 .portfolio-list-item {
   background: var(--dark-text-colour);
   transition: color var(--anim-d) var(--anim-t), box-shadow var(--anim-d) var(--anim-t);
-}
-
-.portfolio-list-item-link:hover .portfolio-list-box,
-.portfolio-list-item-link:focus .portfolio-list-box {
-  box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio-list-item {
   flex-basis: var(--flex-x3);
   margin-left: var(--primary-margin);
   margin-top: var(--primary-margin);
+}
+
+.portfolio-list-item-link:hover .overlay-portfolio, .portfolio-list-item-link:focus .overlay-portfolio {
+  transform: translateY(0%);
+}
+.portfolio-list-item-link:hover .portfolio-list-box, .portfolio-list-item-link:focus .portfolio-list-box {
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-list {
@@ -1005,11 +885,6 @@ address {
   padding: var(--portfolio-list-item-padding);
 }
 
-/*
-.portfolio-list-item-link:hover .overlay-portfolio,
-.portfolio-list-item-link:focus .overlay-portfolio {
-  transform: translateY(0%);
-*/
 /*overlay*/
 .overlay-portfolio {
   background-color: rgba(33, 150, 243, 0.9);
@@ -1033,11 +908,6 @@ address {
 .portfolio-img-wrapper {
   position: relative;
   overflow: hidden;
-}
-
-.portfolio-list-item-link:hover .overlay-portfolio,
-.portfolio-list-item-link:focus .overlay-portfolio {
-  transform: translateY(0%);
 }
 
 /*end overlay*//*# sourceMappingURL=main.css.map */
