--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -13,6 +13,7 @@
   transition: transform var(--anim-d) var(--anim-t);
   padding: 40px;
 }
+
 .modal,
 .modal-form {
   display: flex;
@@ -39,9 +40,8 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-}
-
-.modal-close-btn:hover .modal-close-svg,
-.modal-close-btn:focus .modal-close-svg {
-  fill: var(--focus-colour);
+  &:hover .modal-close-svg,
+  &:focus .modal-close-svg {
+    fill: var(--focus-colour);
+  }
 }
