--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -21,6 +21,11 @@
   letter-spacing: 0.02em;
   color: var(--main-colour);
   transition: color var(--anim-d) var(--anim-t);
+
+  &:hover,
+  &:focus {
+    color: var(--focus-colour);
+  }
 }
 
 .navigation-contact {
@@ -34,39 +39,36 @@
   padding-bottom: 32px;
 }
 
-.menu-link:hover,
-.menu-link:focus,
-.menu-link:active,
-.current-link,
-.menu-contact:hover,
-.menu-contact:focus {
+.current-link {
   color: var(--focus-colour);
-}
 
-.menu-link:hover:after,
-.menu-link:focus:after {
-  opacity: 1;
+  &.menu-link::after {
+    opacity: 1;
+  }
 }
 
 .menu-item {
   position: relative;
 }
 
-.current-link.menu-link::after {
-  opacity: 1;
-}
+.menu-link {
+  &:hover:after,
+  &:focus:after {
+    opacity: 1;
+  }
 
-.menu-link::after {
-  content: "";
-  position: absolute;
-  background-color: var(--focus-colour);
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  bottom: -1px;
-  left: 0;
-  opacity: 0;
-  transition: opacity var(--anim-d) var(--anim-t);
+  &::after {
+    content: "";
+    position: absolute;
+    background-color: var(--focus-colour);
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    bottom: -1px;
+    left: 0;
+    opacity: 0;
+    transition: opacity var(--anim-d) var(--anim-t);
+  }
 }
 
 .menu-contact-item:last-child {
@@ -78,30 +80,19 @@
 }
 
 .contact-header-svg {
-  /* height: 16px;*/
   fill: var(--seconary-colour);
   margin-right: 10px;
   display: flex;
   align-items: center;
-  /*border: 1px solid red;*/
   transition: fill var(--anim-d) var(--anim-t);
 }
 
 .menu-contact {
-  /*border: 1px solid black;*/
   display: flex;
   align-items: center;
-}
-/*
-.mail-svg {
-  width: 12px;
-}
 
-.tel-svg {
-  width: 10px;
-}
-*/
-.menu-contact:hover .contact-header-svg,
-.menu-contact:focus .contact-header-svg {
-  fill: var(--focus-colour);
+  &:hover .contact-header-svg,
+  &:focus .contact-header-svg {
+    fill: var(--focus-colour);
+  }
 }
