--- a/sass/layout/_portfolio-list.scss
+++ b/sass/layout/_portfolio-list.scss
@@ -16,19 +16,23 @@
   background: var(--dark-text-colour);
   transition: color var(--anim-d) var(--anim-t),
     box-shadow var(--anim-d) var(--anim-t);
-}
-
-.portfolio-list-item-link:hover .portfolio-list-box,
-.portfolio-list-item-link:focus .portfolio-list-box {
-  box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio-list-item {
   flex-basis: var(--flex-x3);
   margin-left: var(--primary-margin);
   margin-top: var(--primary-margin);
+}
+
+.portfolio-list-item-link {
+  &:hover .overlay-portfolio,
+  &:focus .overlay-portfolio {
+    transform: translateY(0%);
+  }
+
+  &:hover .portfolio-list-box,
+  &:focus .portfolio-list-box {
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .portfolio-list {
@@ -42,11 +46,6 @@
   padding: var(--portfolio-list-item-padding);
 }
 
-/*
-.portfolio-list-item-link:hover .overlay-portfolio,
-.portfolio-list-item-link:focus .overlay-portfolio {
-  transform: translateY(0%);
-*/
 /*overlay*/
 .overlay-portfolio {
   background-color: rgba(33, 150, 243, 0.9);
@@ -73,11 +72,6 @@
 .portfolio-img-wrapper {
   position: relative;
   overflow: hidden;
-}
-
-.portfolio-list-item-link:hover .overlay-portfolio,
-.portfolio-list-item-link:focus .overlay-portfolio {
-  transform: translateY(0%);
 }
 
 /*end overlay*/
