--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,14 +6,14 @@
   text-decoration: none;
 }
 
-.logo-black {
+.logo_black {
   color: black;
 }
 
-.logo-white {
+.logo_white {
   color: white;
 }
 
-.logo-blue {
+.logo_blue {
   color: var(--focus-colour);
 }
