--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,43 +1,17 @@
 .about-list {
   margin-left: var(--primary-margin-reverse);
   margin-top: var(--primary-margin-reverse);
+  display: flex;
+  flex-wrap: wrap;
+
+  &__img {
+    margin-left: var(--primary-margin);
+    margin-top: var(--primary-margin);
+    flex-basis: var(--flex-x3);
+    position: relative;
+  }
 }
 
-.about-list-img {
-  margin-left: var(--primary-margin);
-  margin-top: var(--primary-margin);
-  flex-basis: var(--flex-x3);
-}
-
-.about {
+.about__section {
   padding-top: 0;
 }
-
-/*overlay text*/
-.about-list-img {
-  position: relative;
-}
-
-.about-overlay-text {
-  font-size: var(--primary-font-size);
-  line-height: 1.14;
-  text-align: center;
-  text-transform: uppercase;
-
-  color: var(--dark-text-colour);
-}
-
-.about-overlay {
-  background-color: rgba(47, 48, 58, 0.8);
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70px;
-  bottom: 0;
-  left: 0;
-  overflow: auto;
-  width: 100%;
-}
-
-/*end overlay text*/
