--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,38 +1,34 @@
-.features-svg {
-  height: 70px;
-  width: 70px;
-}
-
-.features-text {
-  line-height: 1.71;
-  color: var(--seconary-colour);
-}
-
-.features-title {
-  line-height: 1.14;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-.features-list {
+.features {
   margin-left: var(--primary-margin-reverse);
   margin-top: var(--primary-margin-reverse);
-}
-
-.features-block-svg {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 270px;
-  height: 120px;
-  background-color: var(--button-background-colour);
-  border-radius: 4px;
-
-  margin-bottom: var(--primary-margin);
-}
-
-.features-block {
-  margin-left: var(--primary-margin);
-  margin-top: var(--primary-margin);
-  flex-basis: var(--flex-x4);
+  flex-wrap: wrap;
+  &__box-svg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 270px;
+    height: 120px;
+    background-color: var(--button-background-colour);
+    border-radius: 4px;
+    margin-bottom: var(--primary-margin);
+  }
+  &__block {
+    margin-left: var(--primary-margin);
+    margin-top: var(--primary-margin);
+    flex-basis: var(--flex-x4);
+  }
+  &__svg {
+    height: 70px;
+    width: 70px;
+  }
+  &__text {
+    line-height: 1.71;
+    color: var(--seconary-colour);
+  }
+  &__title {
+    line-height: 1.14;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
 }
