--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,8 +12,8 @@
   background-position: center;
 }
 
-.hero-title,
-.hero-button {
+.hero_title,
+.hero__button {
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--dark-text-colour);
@@ -22,7 +22,7 @@
   box-shadow: none;
 }
 
-.hero-title {
+.hero_title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
