--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,13 +9,14 @@
 @import "./base/container";
 
 // COMPONENTS
-@import "./components/s-btn";
-@import "./components/social-link-list";
+@import "./components/main-button";
+@import "./components/social-list";
 @import "./components/title";
 @import "./components/logo";
 @import "./components/backdrop";
 @import "./components/modal-window";
 @import "./components/modal-form";
+@import "./components/about-card";
 
 // LAYOUT
 @import "./layout/header";
@@ -25,7 +26,7 @@
 @import "./layout/about";
 @import "./layout/command";
 @import "./layout/clients";
-@import "./layout/portfolio-buttons";
+@import "./layout/horizontal-button-list";
 @import "./layout/portfolio-list";
 
 //@import ".";
