--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,8 @@ address {
   align-items: center;
   font-weight: 700;
 }
-.main-button:hover, .main-button:focus {
+.main-button:hover,
+.main-button:focus {
   background: var(--hero__button-focus-colour);
 }
 
@@ -135,7 +136,8 @@ address {
   align-items: center;
   transition: background-color var(--anim-d) var(--anim-t);
 }
-.social-list__link:hover, .social-list__link:focus {
+.social-list__link:hover,
+.social-list__link:focus {
   background-color: var(--focus-colour);
 }
 .social-list__icon {
@@ -143,7 +145,8 @@ address {
   width: 20px;
   transition: fill var(--anim-d) var(--anim-t);
 }
-.social-list__link:hover .social-list__icon, .social-list__link:focus .social-list__icon {
+.social-list__link:hover .social-list__icon,
+.social-list__link:focus .social-list__icon {
   fill: var(--dark-text-colour);
 }
 
@@ -192,10 +195,13 @@ address {
 }
 
 .modal {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   width: 528px;
   background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   top: 50%;
   left: 50%;
@@ -203,26 +209,19 @@ address {
   transition: transform var(--anim-d) var(--anim-t);
   padding: 40px;
 }
-
-.modal,
-.modal-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.modal-close-svg {
+.modal__close-svg {
   width: 14px;
   height: 14px;
   fill: #000000;
   transition: fill var(--anim-d) var(--anim-t);
 }
-
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
   background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
   padding: 6px;
   display: flex;
@@ -230,7 +229,8 @@ address {
   align-items: center;
   cursor: pointer;
 }
-.modal-close-btn:hover .modal-close-svg, .modal-close-btn:focus .modal-close-svg {
+.modal__close-btn:hover .modal__close-svg,
+.modal__close-btn:focus .modal__close-svg {
   fill: var(--focus-colour);
 }
 
@@ -247,7 +247,12 @@ address {
   font-weight: 700;
 }
 
-.modal-form__input, .modal-form__comment {
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-form__input,
+.modal-form__comment {
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
@@ -260,16 +265,20 @@ address {
   letter-spacing: 0.01em;
   margin-top: 4px;
 }
-.modal-form__input::-moz-placeholder, .modal-form__comment::-moz-placeholder {
+.modal-form__input::-moz-placeholder,
+.modal-form__comment::-moz-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-form__input:-ms-input-placeholder, .modal-form__comment:-ms-input-placeholder {
+.modal-form__input:-ms-input-placeholder,
+.modal-form__comment:-ms-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-form__input::placeholder, .modal-form__comment::placeholder {
+.modal-form__input::placeholder,
+.modal-form__comment::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-form__input:focus, .modal-form__comment:focus {
+.modal-form__input:focus,
+.modal-form__comment:focus {
   border: 1px solid var(--focus-colour);
   outline: none;
 }
@@ -277,7 +286,8 @@ address {
   position: relative;
   display: block;
 }
-.modal-form__input-box, .modal-form__comment-box {
+.modal-form__input-box,
+.modal-form__comment-box {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -319,7 +329,7 @@ address {
 .modal-form__license-checkbox-link {
   line-height: 1.71;
   -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
   color: var(--focus-colour);
 }
 .modal-form__send-btn-text {
@@ -349,7 +359,8 @@ address {
 .modal-form__license-checkbox {
   vertical-align: middle;
 }
-.modal-form__license-checkbox:checked + .modal-form__user-accept-license::before {
+.modal-form__license-checkbox:checked
+  + .modal-form__user-accept-license::before {
   background-image: url("../images/check-valid.svg");
 }
 .modal-form__license-checkbox:focus + .modal-form__user-accept-license::before {
@@ -376,69 +387,74 @@ address {
   width: 100%;
 }
 
-.header {
-  border-bottom: 1px solid #ececec;
+.command-card {
+  margin-left: var(--primary-margin);
+  margin-top: var(--primary-margin);
+  flex-basis: var(--flex-x4);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
+}
+.command-card__title {
+  padding: 30px;
+}
+.command-card__name,
+.command-card__about {
+  font-size: var(--seconary-font-size);
+  text-align: center;
+}
+.command-card__name {
+  font-weight: 500;
+  line-height: 1.19;
+  margin-bottom: 10px;
+}
+.command-card__about {
+  line-height: 1.19;
+  color: var(--seconary-colour);
+  margin-bottom: 16px;
+}
+.command-card__social-list {
+  justify-content: space-between;
+}
+.command-card_social-icon {
+  fill: var(--tripple-colour);
+}
+.command-card__social-icon-background {
+  background-color: var(--dark-text-colour);
 }
 
-.header__logo {
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-.header__logo,
-.menu,
-.header__contact {
+.menu {
   align-items: center;
+  display: flex;
 }
-
+.menu__item {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 .menu__link,
-.menu-contact {
+.menu__contact {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-colour);
   transition: color var(--anim-d) var(--anim-t);
 }
-.menu__link:hover, .menu__link:focus,
-.menu-contact:hover,
-.menu-contact:focus {
+.menu__link:hover,
+.menu__link:focus,
+.menu__contact:hover,
+.menu__contact:focus {
   color: var(--focus-colour);
 }
-
-.header__contact {
-  margin-left: auto;
-  align-items: center;
-}
-
-.menu,
-.header__container,
-.header__nav,
-.header__contact {
-  display: flex;
-}
-
-.menu__item {
-  position: relative;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.current-link {
-  color: var(--focus-colour);
-}
-.current-link.menu__link::after {
-  opacity: 1;
-}
-
 .menu__item {
   position: relative;
 }
 .menu > .menu__item:not(:last-child) {
   margin-right: var(--menu-interval);
 }
-
-.menu__link:hover:after, .menu__link:focus:after {
+.menu__link:hover:after,
+.menu__link:focus:after {
   opacity: 1;
 }
 .menu__link::after {
@@ -453,25 +469,54 @@ address {
   opacity: 0;
   transition: opacity var(--anim-d) var(--anim-t);
 }
+.menu__contact {
+  display: flex;
+  align-items: center;
+}
+.menu__contact:hover .header__contact-svg,
+.menu__contact:focus .header__contact-svg {
+  fill: var(--focus-colour);
+}
+
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
+.header__logo {
+  margin-right: 93px;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  align-items: center;
+}
+
+.header__contact {
+  margin-left: auto;
+  align-items: center;
+}
+
+.header__container,
+.header__nav,
+.header__contact {
+  display: flex;
+}
+
+.current-link {
+  color: var(--focus-colour);
+}
+.current-link.menu__link::after {
+  opacity: 1;
+}
 
 .header__contact-item:last-child {
   margin-left: var(--menu-interval);
 }
 
-.contact-header-svg {
+.header__contact-svg {
   fill: var(--seconary-colour);
   margin-right: 10px;
   display: flex;
   align-items: center;
   transition: fill var(--anim-d) var(--anim-t);
-}
-
-.menu-contact {
-  display: flex;
-  align-items: center;
-}
-.menu-contact:hover .contact-header-svg, .menu-contact:focus .contact-header-svg {
-  fill: var(--focus-colour);
 }
 
 .footer {
@@ -489,7 +534,8 @@ address {
 .footer__address-list > .footer__address-list-title:not(:last-child) {
   margin-bottom: 9px;
 }
-.footer__address-list-title-link-map, .footer__address-list-title-link {
+.footer__address-list-title-link-map,
+.footer__address-list-title-link {
   font-style: inherit;
   line-height: 1.71;
 }
@@ -575,13 +621,17 @@ address {
   background-color: var(--background-colour);
   padding-top: 200px;
   padding-bottom: 200px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/bg.jpg);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero/bg.jpg);
   background-size: cover, 1600px;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.hero_title,
+.hero__title,
 .hero__button {
   text-align: center;
   letter-spacing: 0.06em;
@@ -591,7 +641,7 @@ address {
   box-shadow: none;
 }
 
-.hero_title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -663,41 +713,6 @@ address {
   flex-wrap: wrap;
 }
 
-.command-card {
-  margin-left: var(--primary-margin);
-  margin-top: var(--primary-margin);
-  flex-basis: var(--flex-x4);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  background: #ffffff;
-}
-.command-card__title {
-  padding: 30px;
-}
-.command-card__name, .command-card__about {
-  font-size: var(--seconary-font-size);
-  text-align: center;
-}
-.command-card__name {
-  font-weight: 500;
-  line-height: 1.19;
-  margin-bottom: 10px;
-}
-.command-card__about {
-  line-height: 1.19;
-  color: var(--seconary-colour);
-  margin-bottom: 16px;
-}
-.command-card__social-list {
-  justify-content: space-between;
-}
-.command-card_social-icon {
-  fill: var(--tripple-colour);
-}
-.command-card__social-icon-background {
-  background-color: var(--dark-text-colour);
-}
-
 .clients-container__title {
   margin-bottom: 50px;
 }
@@ -718,10 +733,12 @@ address {
   width: 170px;
   height: 92px;
 }
-.clients__button:hover, .clients__button:focus {
+.clients__button:hover,
+.clients__button:focus {
   border: 1px solid var(--focus-colour);
 }
-.clients__button:hover .clients__svg, .clients__button:focus .clients__svg {
+.clients__button:hover .clients__svg,
+.clients__button:focus .clients__svg {
   fill: var(--focus-colour);
 }
 .clients__svg {
@@ -757,12 +774,16 @@ address {
   padding-top: var(--horizontal-button-vertical-padding);
   padding-bottom: var(--horizontal-button-vertical-padding);
   border: none;
-  transition: color var(--anim-d) var(--anim-t), background-color var(--anim-d) var(--anim-t), box-shadow var(--anim-d) var(--anim-t);
+  transition: color var(--anim-d) var(--anim-t),
+    background-color var(--anim-d) var(--anim-t),
+    box-shadow var(--anim-d) var(--anim-t);
 }
-.horizontal-button-list__button:hover, .horizontal-button-list__button:focus {
+.horizontal-button-list__button:hover,
+.horizontal-button-list__button:focus {
   color: var(--dark-text-colour);
   background-color: var(--focus-colour);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list {
@@ -774,7 +795,8 @@ address {
 
 .portfolio-card {
   background: var(--dark-text-colour);
-  transition: color var(--anim-d) var(--anim-t), box-shadow var(--anim-d) var(--anim-t);
+  transition: color var(--anim-d) var(--anim-t),
+    box-shadow var(--anim-d) var(--anim-t);
   flex-basis: var(--flex-x3);
   margin-left: var(--primary-margin);
   margin-top: var(--primary-margin);
@@ -791,12 +813,15 @@ address {
   line-height: 1.88;
   color: var(--seconary-colour);
 }
-.portfolio-card__link:hover .portfolio-card__overlay, .portfolio-card__link:focus .portfolio-card__overlay {
+.portfolio-card__link:hover .portfolio-card__overlay,
+.portfolio-card__link:focus .portfolio-card__overlay {
   transform: translateY(0%);
 }
-.portfolio-card__link:hover .portfolio-card__box, .portfolio-card__link:focus .portfolio-card__box {
+.portfolio-card__link:hover .portfolio-card__box,
+.portfolio-card__link:focus .portfolio-card__box {
   box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-card__border-to-image {
   border: 1px solid #eeeeee;
@@ -824,4 +849,4 @@ address {
 .portfolio-card__img-wrapper {
   position: relative;
   overflow: hidden;
-}/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
