--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -10,6 +10,9 @@
   font-weight: 700;
 }
 .modal-form {
+  display: flex;
+  flex-direction: column;
+
   &__input,
   &__comment {
     border: 1px solid rgba(33, 33, 33, 0.2);
