--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,23 +10,23 @@
   background-size: cover, 1600px;
   background-repeat: no-repeat;
   background-position: center;
-}
 
-.hero_title,
-.hero__button {
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--dark-text-colour);
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: none;
-}
+  &__title,
+  &__button {
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--dark-text-colour);
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: none;
+  }
 
-.hero_title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  width: 696px;
+  &__title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    width: 696px;
+  }
 }
