--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,10 @@
 @import "./components/modal-window";
 @import "./components/modal-form";
 @import "./components/about-card";
+@import "./components/command_card";
+@import "./components/menu";
+@import "./components/current-link";
+@import "./components/portfolio-card";
 
 // LAYOUT
 @import "./layout/header";
